# plansmith

./: .gitignore  LICENSE  README.md  pyproject.toml
plansmith/: __init__.py  cli.py  plan_diff.py  triage.py  web.py
plansmith/templates/: index.html
samples/: baseline_q1.json  baseline_q2.json  incident_q1.json  incident_q2.json  q1.sql  q2.sql
